--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="story">Story</string>
     <string name="picture">Picture</string>
     <string name="back"><![CDATA[<< Back]]></string>
+    <string name="photo_diary_app">Photo Diary App</string>
 </resources>
